infra/vpc.tf
# pull the AZ's 
data "aws_availability_zones" "available" {}


resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "${var.project_name}-vpc"
  }
}


# internet gateway 
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.project_name}-igw"
  }
}


# Public subnets used
resource "aws_subnet" "public" {
  count = length(var.public_subnet_cidrs)

  vpc_id      = aws_vpc.main.id
  cidr_block  = var.public_subnet_cidrs[count.index]
  availability_zone = data.aws_availability_zones.available.names[count.index]

  map_public_ip_on_launch   = true   # needed for internet-facing resources

  tags = {
    Name = "${var.project_name}-public-${count.index + 1}"
  }
}


# Private ones used
resource "aws_subnet" "private" {
  count    = length(var.private_subnet_cidrs)
  vpc_id   = aws_vpc.main.id

  cidr_block  = var.private_subnet_cidrs[count.index]
  availability_zone = data.aws_availability_zones.available.names[count.index]

  tags = {
    Name = "${var.project_name}-private-${count.index + 1}"
  }
}


# Public RT (0.0.0.0/0 → IGW)
resource "aws_route_table" "public" {
  vpc_id   = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id    = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "${var.project_name}-public-rt"
  }
}


# attach public subnets to RT
resource "aws_route_table_association" "public" {
  count = length(aws_subnet.public)

  subnet_id  = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}
